# docs.bazzite.gg

./: 404.md  Justfile  README.md  Ublue-Docs.md  action.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy_docs.yml
hooks/: fail_on_hardcoded_url.py  md_image_sizing.py
macros_tmpls/: README.md  automounting_guide_depr.md  desktop_envs.md
plugins/: pyproject.toml
plugins/src/bazzite_social/: config.py  plugin.py
src/: Bazzite_Press_Kit.md  Bazzite_README.md  CONTRIBUTE.md  Resources.md  donations.md  index.md  tags.md
src/Advanced/: Auto-Mounting_Secondary_Drives.md  Best_Practices.md  Best_Shell_Practices.md  Contributing_to_bazzite.md  GNOME_Disks_Auto-Mount_Guide.md  KDE_Partition_Manager_Auto_Mount_Guide.md  Reset_Forgotten_User_Password.md  Show Detailed Boot.md  bazzite-cli.md  contributing.md  creating_custom_image.md  dracut-and-initramfs.md  index.md  issues_and_resolutions.md  looking-glass.md  rescue-and-emergency-mode.md  scopebuddy.md  swapfile.md
src/Gaming/: Common_gaming_issues.md  Game_Launchers.md  Hardware_compatibility_for_gaming.md  Managing_and_modding_games.md  index.md
src/General/: Desktop_Environment_Tweaks.md  FAQ.md  SteamOS_Comparison.md  community-links.md  index.md  issues_and_resolutions.md  reporting_bugs.md  terms.md  uninstalling-bazzite.md
src/General /: bazzite-portal-legacy.md
src/Handheld_and_HTPC_edition/: Steam_Gaming_Mode.md  quirks.md  update-bios-lenovo-legion-go.md  update-bios.md
theme_overrides/: main.html
utils/: install-deps.sh
(+37 files in other folders)
