[project]
name = "docs-bazzite-gg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "mdx-truly-sane-lists>=1.3",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material[imaging]>=9.5.42",
    "requests>=2.32.3",
    "bazzite-docs-ext",
    "mkdocs-static-i18n>=1.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-git-committers-plugin-2>=2.4.1",
]

[tool.uv.sources]
bazzite-docs-ext = { path = "plugins", editable = true }
